      Note that ${file} is replaced by the filename/path to edit "in quotes"
      and ${line} the line number to set the initial cursor position to.
  - Added OPTION SEARCH PATH <path> command.
  - Added * command which may be used at the MMBasic prompt (but not within
    programs) as a short-cut for RUN, e.g.
        *foo --bar "wombat"
    is translated to:
        RUN "foo", --bar "wombat"
  - Changed LOAD and RUN so that if a filename without a [.bas|.BAS|.Bas]
    extension is not provided then one is automatically appended.
      - unlike other MMBasic ports MMB4L has a case-sensitive file-system
        and expects MMBasic program files to have one of three possible
        extensions: .bas, .BAS, or .Bas.
      - if no extension is specified then MMB4L will check for the existence
        of a file with each extension in order, if no such file is found then
        it assumes the .bas extension.
  - Changed assignment of values to MM.ERRNO, they are now:
           0      : no error.
       1  ..  255 : standard error numbers (errno) for C library calls.
          256     : unclassified MMBasic error.
      257 .. 1023 : reserved for specific MMBasic errors.
         1024+    : reserved for program specific errors.
    Error codes from the SYSTEM command are an exception to this rule; if
    SYSTEM fails then MM.ERRNO is set equal to the executed program's
    exit code.

Version 2022.01.00-a3 - 16-Jan-2022:
  - Added serial port support, e.g.
        OPEN "/dev/ttyS0: 115200" As #1
    this is very preliminary and in need of extensive user testing,
    see README for details.
  - Added XMODEM {SEND|RECEIVE} file$, #fnbr command:
    - #fnbr must first have been OPENed as a serial port.
    - unlike other MMBasic versions, MMB4L cannot use XMODEM to send to or
      receive from the console.
  - Added OPTION CODEPAGE page$ command:
    - causes character bytes in the range 128-255 to be translated to Unicode